@@ -62,7 +62,7 @@ def youth(data):
     sorted_by_age = data['exonerations'].order_by('age')
     youngest_ten = sorted_by_age.limit(10)
 
-    print(youngest_ten.format(max_columns=7))
+    youngest_ten.pretty_print(max_columns=7)
 
 def states(data):
     state_totals = data['with_years_in_prison'].group_by('state')
@@ -73,7 +73,7 @@ def states(data):
 
     sorted_medians = medians.order_by('median_years_in_prison', reverse=True)
 
-    print(sorted_medians.format(max_rows=5))
+    sorted_medians.pretty_print(max_rows=5)
 
 def race_and_age(data):
     # Filters rows without age data
@@ -100,7 +100,7 @@ def race_and_age(data):
     sorted_groups = medians.order_by('median_years_in_prison', reverse=True)
 
     # Print out the results
-    print(sorted_groups.format(max_rows=10))
+    sorted_groups.pretty_print(max_rows=10)
 
 analysis = proof.Analysis(load_data)
 analysis.then(confessions)
